fix: font flickering

--- a/src/app/styles/fonts.css
+++ b/src/app/styles/fonts.css
@@ -4,6 +4,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 100;
+  font-display: block; /* Fix flickering */
 }
 
 @font-face {
@@ -12,6 +13,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 200;
+  font-display: block; /* Fix flickering */
 }
 
 @font-face {
@@ -20,4 +22,5 @@
   font-style: normal;
   font-display: swap;
   font-weight: 300;
+  font-display: block; /* Fix flickering */
 }
